# ml4b-foodrecognition

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  TRAINING.md  app.py  pyproject.toml  requirements-lock.txt  requirements.txt  setup_env.py
artifacts/: ecustfd_features.csv  ecustfd_features_extended.csv  n5k_features.csv  n5k_scale.json  volume_model_trained.joblib  volume_regressor.joblib
data/: download_ecustfd.py  download_nutrition5k.py
data/n5k_meta/: n5k_class_priors.json  n5k_subset_manifest.csv
foodvol/: __init__.py  benchmark.py  calibration.py  chessboard.py  classification.py  config.py  datasets.py  depth.py  n5k.py  nutrition.py  pipeline.py  recognition.py  segmentation.py  video.py  volume.py
foodvol/data/: build_nutrition_db.py  nutrition_db.csv
notebooks/: 00_feasibility.ipynb  01_training.ipynb
tests/: test_calibration.py  test_datasets.py  test_nutrition.py  test_pipeline.py  test_portion_priors.py  test_smoke.py  test_video.py  test_volume.py
